# backend/api/services/DeviceServices.js
@@ -1,10 +1,18 @@
 const Services = require('./Services')
+const database = require('../models')
 
 class DeviceServices extends Services {
     constructor() {
         super('Device')
+        this.category = new Services('Category')
     }
-   
+    
+
+    async read() {
+        return database[this.nameModel].findAll({ include: { model: database.Category }})
+    }
+
+
     
 }
 
